# tracker-host

./: .gitignore  .gitmodules  Main.hs  Plot.hs  PreAmp.hs  README.mkd  Tracker.hs  tracker-host.cabal
PreAmp/: Optimize.hs
Tracker/: Commands.hs  Excitation.hs  FineCal.hs  LowLevel.hs  Monad.hs  PathAcquire.hs  Raster.hs  RoughCal.hs  Sensors.hs  Types.hs
Tracker/Commands/: Types.hs
Tracker/RoughCal/: Model.hs
Tracker/Types/: Fixed.hs
TrackerUI/: Commands.hs  Plot.hs  Types.hs
TrackerUI/Plot/: Types.hs
Util/: RingBuffer.hs
tracker-host/: Main.hs  PreAmp.hs  Tracker.hs  Trap.hs  tracker-host.cabal
tracker-host/PreAmp/: Optimize.hs
tracker-host/Tracker/: Excitation.hs  FineCal.hs  PathAcquire.hs  RoughCal.hs
tracker-host/Tracker/RoughCal/: Model.hs
tracker-host/TrackerUI/: Commands.hs  Plot.hs  Queue.hs  Types.hs
tracker-host/TrackerUI/Commands/: Excite.hs  Feedback.hs  FineCal.hs  Log.hs  Plot.hs  PreAmp.hs  RoughCal.hs  Stage.hs  Trap.hs  Utils.hs
tracker-host/TrackerUI/Plot/: Types.hs
tracker-host/Trap/: Aotf.hs  MonitorTimetag.hs  Sensor.hs  Timetag.hs
tracker-lib/: tracker-lib.cabal
tracker-lib/Tracker/: Commands.hs  LowLevel.hs  Raster.hs
tracker-lib/Tracker/Commands/: Types.hs
trap/: Aotf.hs  Main.hs  MonitorTimetag.hs  Timetag.hs  trap.cabal
