name:                tracker-host
version:             0.1.0.0
synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@physics.umass.edu
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Tracker.Types,
                       Tracker.Types.Fixed,
                       Tracker.LowLevel,
                       Tracker.Commands

  build-depends:       base >=4.6,
                       transformers >=0.3 && <0.5,
                       binary ==0.7.*,
                       stm >=2.4,
                       vector ==0.10.*,
                       primitive >=0.5 && <0.6,
                       bytestring ==0.10.*,
                       linear >=1.3,
                       mmorph,
                       haskeline ==0.7.*,
                       async ==2.0.*,
                       usb >=1.2,
                       mtl >=2.1 && <2.3,
                       lens >=3.9,
                       distributive >=0.3 && <0.5,
                       adjunctions >=4.0 && <4.2,
                       errors,
                       either

executable tracker-host
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >=4.6,
                       transformers >=0.3 && <0.5,
                       binary ==0.7.*,
                       stm >=2.4,
                       vector ==0.10.*,
                       primitive >=0.5 && <0.6,
                       bytestring ==0.10.*,
                       linear >=1.3,
                       ad, optimization,
                       mmorph,
                       haskeline ==0.7.*,
                       async ==2.0.*,
                       usb >=1.2,
                       mtl >=2.1 && <2.3,
                       lens >=3.9,
                       distributive >=0.3 && <0.5,
                       adjunctions >=4.0 && <4.2,
                       mwc-random >=0.12 && <0.14,
                       hmatrix,
                       serialport,
                       errors,
                       either,
                       gl-plot,
                       OpenGL, GLFW-b,
                       Chart, Chart-cairo, data-default, colour
