name:                tracker-host
version:             0.1.0.0
synopsis:            Tracker host
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@physics.umass.edu
copyright:           (c) 2014 Ben Gamari
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable tracker-host
  main-is:             Main.hs
  ghc-options:         -threaded -Wall
  build-depends:       base >=4.6,
                       transformers >=0.3 && <0.5,
                       binary ==0.7.*,
                       stm >=2.4,
                       vector ==0.10.*,
                       primitive >=0.5 && <0.6,
                       bytestring ==0.10.*,
                       linear >=1.3,
                       ad, optimization,
                       mmorph,
                       haskeline ==0.7.*,
                       async ==2.0.*,
                       usb >=1.2,
                       mtl >=2.1 && <2.3,
                       lens >=3.9,
                       distributive >=0.3 && <0.5,
                       adjunctions >=4.0 && <4.3,
                       mwc-random >=0.12 && <0.14,
                       hmatrix,
                       serialport,
                       errors,
                       either,
                       cassava,
                       ring-buffer,

		       -- Trapping
                       hphoton,
                       hphoton-fpga-timetagger,
                       pipes >=4.1 && <4.2,
                       pipes-bytestring >=2.1 && <2.2,
                       pipes-binary,
                       pipes-safe,
                       foldl,
                       dlist,
                       process >=1.2 && <1.3,
                       zeromq4-haskell,
                       time >= 1.5 && <1.6,
                       unix,
                       filepath,
                       directory,

                       tracker-lib,
                       gl-plot,
                       OpenGL, GLFW-b,
                       statistics,
                       Chart,
                       Chart-cairo >= 1.3 && < 1.5,
                       data-default,
                       colour
