name:                tracker-lib
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@physics.umass.edu
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Tracker.Types,
                       Tracker.Types.Fixed,
                       Tracker.LowLevel,
                       Tracker.Commands

  other-modules:       Tracker.Commands.Types

  ghc-options:         -Wall

  build-depends:       base >=4.6,
                       transformers >=0.3 && <0.5,
                       binary ==0.7.*,
                       stm >=2.4,
                       vector ==0.10.*,
                       primitive >=0.5 && <0.6,
                       bytestring ==0.10.*,
                       linear >=1.3,
                       mmorph,
                       haskeline ==0.7.*,
                       async ==2.0.*,
                       usb >=1.2,
                       lens >=3.9,
                       distributive >=0.3 && <0.5,
                       adjunctions >=4.0 && <4.3,
                       cassava,
                       errors,
                       either